# ceres_learn

./: .gitignore  CMakeLists.txt  README.md  Tutorial.html  Tutorial.md
doc/: Tutorial.md  bal.md
examples/: helloworld_analytic_diff.cc  helloworld_numeric_diff.cc  powell.cc  robust_curve_fitting.cc  simple_bundle_adjuster.cc
src/: CMakeLists.txt  bal_problem.cpp  bal_problem.h  bundle_adjuster.cpp  curve_fitting.cpp  helloworld_numeric_diff.cpp  main.cpp  simple_bundle_adjuster.cpp
